--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="../public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1f1f1f" />
-    <meta name="title" content="kompass React Dashboard | Open Source Admin Template" />
+    <meta name="title" content="kompass React Company Dashboard | Open Source Admin Template" />
     <meta name="description" content="React  dashboard template built using MUI React components with open source MIT license." />
     <meta
       name="keywords"
@@ -35,7 +35,7 @@
     <meta property="twitter:image" content="https://mantisdashboard.io/adv-banner-images/og-social.png" />
     <meta name="twitter:creator" content="@mykompass" />
 
-    <title>my.hellokompass.com</title>
+    <title>KOMPASS | KOMPASS TECHNOLOGY</title>
     <link rel="preconnect" href="../public/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap&family=Public+Sans:wght@400;500;600;700"
